# SETR2-practica4-rust

./: .gitignore  99-probe-rs.rules  COMPARISON.md  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  peripherals_config.rs  serial_task.rs
