[package]
name = "practica4-rust"
version = "1.1.0"
edition = "2024"
authors = ["Alfonso Espadero"]
description = "STM32L475 FreeRTOS project ported to Rust with Embassy"
license = "MIT"

[dependencies]
# Embassy core
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5", features = ["tick-hz-32_768"] }
embassy-sync = "0.7"
embassy-futures = "0.1"

# STM32L4 support
embassy-stm32 = { version = "0.4", features = [
    "stm32l475vg",
    "time-driver-any",
    "exti",
    "memory-x",
] }

# Cortex-M support
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

# Debugging and logging
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

# Embedded utilities
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
static_cell = "2.1"
heapless = "0.9"

[profile.dev]
debug = 2
opt-level = 1
lto = false

[profile.release]
debug = 2
opt-level = "s"
lto = true

[build-dependencies]
# No build dependencies needed - using embassy-stm32 memory-x feature
